--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -3,4 +3,7 @@
   src: url("../fonts/Roboto-Regular-webfont.woff") format("woff");
   font-weight: normal;
   font-style: normal;
+  font-size: 16px;
+  line-height: 27px;
+  color: #3e3e3e;
 }
