--- a/src/styles/blocks/places.scss
+++ b/src/styles/blocks/places.scss
@@ -29,7 +29,15 @@
     object-position: center;
     border-radius: 8px;
 
-    
+    -webkit-transform: scale(1);
+	  transform: scale(1);
+	  -webkit-transition: .3s ease-in-out;
+	  transition: .3s ease-in-out;
+
+    &:hover {
+      -webkit-transform: scale(1.3);
+	    transform: scale(1.3);
+    }
   }
 
   &__photos {
