--- a/src/styles/blocks/testimonials.scss
+++ b/src/styles/blocks/testimonials.scss
@@ -29,6 +29,16 @@
     grid-column: 2 / 4;
     width: 100%;
     border-radius: 50%;
+
+    -webkit-transform: scale(1);
+	  transform: scale(1);
+	  -webkit-transition: .3s ease-in-out;
+	  transition: .3s ease-in-out;
+
+    &:hover {
+      -webkit-transform: scale(1.3);
+	    transform: scale(1.3);
+    }
   }
 
   &__name {
